style.css
/*
Color Palette:
- Midnight Violet: #320A28
- Crimson Violet: #511730
- Reddish Brown: #8E443D
- Toasted Almond: #ACB9173
- Light Gold: #E0D68A
- Tan: #E9C4B1;

Task 3:
Goal: style the site for a visually appealing interface.
- use CSS to style navigation bar, recipe cards, and overall layout.
- ensure responsive design by adding media queries for mobile devices.
- implement a color scheme and typography that consists with the wireframe.

Task 5: 
Goal: adding smooth transistions and inter activity
- use CSS animations for hover effects on buttons and recipe cards.
- implement smooth scrolling for navigation.
- add feeback animations for buttons (i.e., a "Favorite button toggle)

==========
Example for using media queries for responsive design: (by Eljay)
with screen smaller than 850pz + responsive
@media (max-width: 850px) {
    .hero-section .text h2 {
        font-size: 35px;
    }
}


- puts image on top of text + responsive 
@media (max-width: 740px) { 
    /*section 1: hero
    .hero-section {
        flex-direction: column-reverse;
    }

    /*section 3 + 4
    .project-card {
        width: 100%;
    }

    /*section 5: contact
    .contact-section .group {
        flex-direction: column;
    }
}

@media (max-width: 600px) {
    /*navbar
    nav {
        padding: 0 20px; 
    }

    nav .right a {
        font-size: 24px;
    }

    nav .right a:last-child {
        color: var(--background-color);
        background-color: transparent;
        padding: 0; 
    }

    nav .right a span {
        display: none;

    }

    /* section 1: hero 
    .hero-section {
        padding: 0 20px;
    }

    .hero-section .text h2 {
        font-size: 28px;
    }

    /*section 2: skills
    .skills-section {
        padding: 0 20px;
    }

    .skills-section .cells .cell {
        font-style: 16px;
    }

    /*section 3 + 4
    .project-section {
        padding: 0 20px;
    }

    /*section 5: contact
    .contact-section{
        padding: 0 20px;
    }

    footer {
        padding: 20px;
    }
}


*/

body,
html {
    margin: 0;
}

:root {
    --midnight-violet: #320A28;
    --crimson-violet: #511730;
    --reddish-brown: #8E443D;
    --toasted-almond: #CB9173;
    --light-gold: #fff8bf;
    --tan: #e9c4b1;
    --text: rgb(0, 0, 0);
}

.darkmode {
    --midnight-violet: #320A28;
    --crimson-violet: #300e1d;
    --reddish-brown: #3f1f1c;
    --toasted-almond: #CB9173;
    --light-gold: #fff8bf;
    --tan: #000000;
    --text: rgb(255, 255, 255);
}

p, tr, h1, h2, div {
    color: var(--text);
}

#theme-switch {
    height: 50px;
    width: 50px;
    border-radius: 50%;
    margin: 10px;
    background-color: var(--text);
    display: flex;
}

body {
    background-color: var(--tan);
}

header {
    background-color: var(--reddish-brown);
    position: sticky;
    top: 0;
    width: 100%;
    z-index: 1000;
    padding: 5px;
}

footer {
    background-color: var(--toasted-almond);
    width: 100%;
    padding: 5px;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 3px solid #000000;
    margin: 1em 0;
    padding: 0;
}

th,
td {
    border: 1px solid black;
    border-collapse: collapse;
    background-color: var(--toasted-almond);
    padding: 4px;
    padding-left: 16px;
    padding-right: 16px;
}

th:hover,
td:hover {
    color: var(--light-gold);
}

tfoot td {
    background-color: var(--tan);
    border: 0px;
    text-align: center;
}

tfoot td:hover {
    color: black;
}

th {
    background-color: var(--reddish-brown);
}


/*horizontal navigation bar*/

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    gap: 20px;
}

nav ul li a {
    text-decoration: none;
    border-radius: 5px;
    padding: 6px 12px;
    display: inline-block;
    background-color: var(--crimson-violet);
    color: var(--light-gold);
    border: 2px solid var(--light-gold);
    transition: background-color 0.3s ease;
}

nav ul li a:hover {
    background-color: var(--light-gold);
    color: var(--crimson-violet);
}

.navbutton {
    background-color: #511730;
    border-color: #000000;
    padding: 5px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    margin: 15px;
}

.navbutton a {
    color: var(--light-gold);
}

.navbutton:hover {
    background-color: var(--reddish-brown);
}

.navbutton a:hover {
    color: rgb(255, 153, 0);
}

body {
    margin: 0;
    scroll-padding-top: 80px;
    font-family: 'EB Garamond', serif;
}

img:hover {
    -webkit-filter: saturate(200%);
}

.centeredtext {
    text-align: center;
}

blockquote {
    max-width: 70%;
}


/* Page Sections */

#intro {
    padding: 10px;
    margin: 30px;
    display: flex;
}

#seasonal {
    background-color: var(--crimson-violet);
    padding: 20px;
    margin-top: 30px;
}

#about {
    padding: 15px;
    margin-top: 20px;
    margin-bottom: 20px;
}

#aboutFlex {
    display: flex;
}

.featuredlist {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    /*adjusts the column count for the recipe cards*/
    gap: 8px;
    padding: 20px;
    width: 100%;
    box-sizing: border-box;
}

.resultsgrid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
    padding: 20px;
    width: 100%;
    box-sizing: border-box;
}

.recipelayout {
    display: flex;
    padding: 10px;
    margin: 20px;
}

.recipelayout img {
    height: 250px;
    width: 250px;
}

#recipe-complete img {
    height: 250px;
    width: 250px;
}

#recipe-details h1 {
    margin: 10px;
}

#checklist {
    font-size: 28px;
    color: var(--text);
    padding: 10px;
    list-style-type: none;
}

.ingCheck {
    width: 25px;
    height: 25px;
}

ul li.checked {
    background: var(--reddish-brown);
    text-decoration: line-through;
}

ul li.checked::before {
    background: var(--crimson-violet);
}

.rec #headerdiv {
    display: flex;
    align-items: center;
    align-content: center;
}
/* ... */

